--- a/backend/src/main/resources/templates/helloTest.html
+++ b/backend/src/main/resources/templates/helloTest.html
@@ -5,6 +5,8 @@
   <title>Title</title>
 </head>
 <body>
-  <h1 style="color:red">This is hello.</h1>
+  <h1 style="color:red">HELL O</h1>
+  <h2>TEAM 101</h2>
+  <img src="image.png" alt="imasd" style="width:800px; height:800px;">
 </body>
 </html>
