--- a/frontend/product-page/src/css/nav-img.css
+++ b/frontend/product-page/src/css/nav-img.css
@@ -1,6 +1,6 @@
   
   section > img {
-    height:700px;
+    height:100vh;
     width: 100%;
     /* min-width: 1000px; */
     background-size: cover;
@@ -8,7 +8,7 @@
     overflow:hidden;
     object-fit: auto;
   }
-  section > h1 {
+  /* section > h1 {
     color: black;
     position: absolute;
     top: 35%;
@@ -24,15 +24,15 @@
     left: 30%;
     transform: translate(0%, -50%);
     font-size: 45px;    
-  }  
-  section > h4:last-child {
+  }   */
+  /* section > h4:last-child {
     color: black;
     position: absolute;
     top: 65%;
     left: 30%;
     transform: translate(0%, -50%);
     font-size: 45px;    
-  }
+  } */
   .container-content {
     margin: 0;
     padding-left: 120px;
