--- a/frontend/product-page/src/css/nav-img.css
+++ b/frontend/product-page/src/css/nav-img.css
@@ -4,9 +4,9 @@
     width: 100%;
     /* min-width: 1000px; */
     background-size: cover;
-    /* filter:brightness(0.25); */
+    filter:brightness(0.85);
     overflow:hidden;
-    object-fit: auto;
+    object-fit: cover;
   }
   /* section > h1 {
     color: black;
